Small fixes to hidden indicator. Showing after switching intelligence after clicking show hidden stories. Also wrapping the feed title in the feedbar. Lastly, fixing the slider to see 0 as neutral, not missing.

--- a/media/css/reader.css
+++ b/media/css/reader.css
@@ -1075,13 +1075,11 @@ background: transparent;
     background-color: #909090;
     color: #F0F0F0;
     cursor: pointer;
-    position: absolute;
-    right: 205px;
-    top: 2px;
+    float: right;
+    margin: 3px 4px 2px 6px;
     font-size: 9px;
     line-height: 15px;
     font-weight: bold;
-    margin: 3px 11px 2px;
     padding: 0 4px;
     text-transform: uppercase;
     overflow: hidden;
